[DELETE] 移除mysql-connector模块 [UPDATE] 使用versionCatalogs来管理依赖，移除buildSrc